massive apmbs update

--- a/templates/emails/pending.html.twig
+++ b/templates/emails/pending.html.twig
@@ -41,6 +41,18 @@
             <td style="width: 500px; border: solid #e2e8f0; border-width: 0px 0px 1px; background-color: #f1f5f9; padding-top: 8px; padding-bottom: 8px">{{ reservation.phone }}</td>
         </tr>
         <tr>
+            <td style="width: 100px; border: solid #e2e8f0; border-width: 0px 0px 1px; background-color: #f1f5f9; padding-top: 8px; padding-bottom: 8px; padding-left: 8px; font-weight: 700">Rue</td>
+            <td style="width: 500px; border: solid #e2e8f0; border-width: 0px 0px 1px; background-color: #f1f5f9; padding-top: 8px; padding-bottom: 8px">{{ reservation.rue }}</td>
+        </tr>
+        <tr>
+            <td style="width: 100px; border: solid #e2e8f0; border-width: 0px 0px 1px; background-color: #f1f5f9; padding-top: 8px; padding-bottom: 8px; padding-left: 8px; font-weight: 700">NPA</td>
+            <td style="width: 500px; border: solid #e2e8f0; border-width: 0px 0px 1px; background-color: #f1f5f9; padding-top: 8px; padding-bottom: 8px">{{ reservation.npa }}</td>
+        </tr>
+        <tr>
+            <td style="width: 100px; border: solid #e2e8f0; border-width: 0px 0px 1px; background-color: #f1f5f9; padding-top: 8px; padding-bottom: 8px; padding-left: 8px; font-weight: 700">Localité</td>
+            <td style="width: 500px; border: solid #e2e8f0; border-width: 0px 0px 1px; background-color: #f1f5f9; padding-top: 8px; padding-bottom: 8px">{{ reservation.localite }}</td>
+        </tr>
+        <tr>
             <td style="width: 100px; border: solid #e2e8f0; border-width: 0px 0px 1px; background-color: #f1f5f9; padding-top: 8px; padding-bottom: 8px; padding-left: 8px; font-weight: 700">Groupe</td>
             <td style="width: 500px; border: solid #e2e8f0; border-width: 0px 0px 1px; background-color: #f1f5f9; padding-top: 8px; padding-bottom: 8px">{{ reservation.unite }}</td>
         </tr>
