--- a/templates/emails/invoice.html.twig
+++ b/templates/emails/invoice.html.twig
@@ -3,8 +3,8 @@
 {% block content %}
 <tr>
     <td style="width: 600px; max-width: 100%;">
-    <p style="margin: 0 0 20px; border-radius: 4px; background-color: #10b981; padding-top: 12px; padding-bottom: 12px; text-align: center; font-size: 20px; font-weight: 700; color: #fffffe; box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05)">
-        Facture pour votre réservation
+    <p style="margin: 0 0 20px; border-radius: 4px; background-color: #cccccc; padding-top: 12px; padding-bottom: 12px; text-align: center; font-size: 20px; font-weight: 700; color: #fffffe; box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05)">
+        Facture de réservation
     </p>
     </td>
 </tr>
@@ -13,6 +13,25 @@
     <p style="margin: 0 0 20px; font-size: 16px; color: #334155">
         {{ reservation.cabane.invoiceEmail }}
     </p>
+    </td>
+</tr>
+<tr>
+    <td style="width: 600px; max-width: 100%;">
+    <p style="margin: 0 0 12px; font-size: 18px; font-weight: 600; color: #0f172a">Détails de la facture</p>
+    <table style="border-radius: 4px; color: #334155; box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);" cellpadding="0" cellspacing="0" role="none">
+        <tbody>
+        <tr>
+            <td style="width: 100px; border: solid #e2e8f0; border-width: 0px 0px 1px; background-color: #f1f5f9; padding-top: 8px; padding-bottom: 8px; padding-left: 8px; font-weight: 700">{{ reservation.cabane.nom }}</td>
+            <td style="width: 500px; border: solid #e2e8f0; border-width: 0px 0px 1px; background-color: #f1f5f9; padding-top: 8px; padding-bottom: 8px">{{ reservation.finalPrice }} CHF</td>
+        </tr>
+        {% if autreFrais %}
+        <tr>
+            <td style="width: 100px; border: solid #e2e8f0; border-width: 0px 0px 1px; background-color: #f1f5f9; padding-top: 8px; padding-bottom: 8px; padding-left: 8px; font-weight: 700">{{ autreFrais['message'] }}</td>
+            <td style="width: 500px; border: solid #e2e8f0; border-width: 0px 0px 1px; background-color: #f1f5f9; padding-top: 8px; padding-bottom: 8px">{{ autreFrais['montant'] }} CHF</td>
+        </tr>
+        {% endif %}
+        </tbody>
+    </table>
     </td>
 </tr>
 {% if message %}
