--- a/templates/emails/accepted.html.twig
+++ b/templates/emails/accepted.html.twig
@@ -30,7 +30,7 @@
         </tr>
         {% if reservation.estimatedPrice %}
         <tr>
-            <td style="width: 100px; border-bottom-left-radius: 4px; background-color: #f1f5f9; padding-top: 8px; padding-bottom: 8px; padding-left: 8px; font-weight: 700">>Prix Estimé</td>
+            <td style="width: 100px; border-bottom-left-radius: 4px; background-color: #f1f5f9; padding-top: 8px; padding-bottom: 8px; padding-left: 8px; font-weight: 700">Prix Estimé</td>
             <td style="width: 500px; border-bottom-right-radius: 4px; background-color: #f1f5f9; padding-top: 8px; padding-bottom: 8px">{{ reservation.estimatedPrice }} CHF</td>
         </tr>
         {% endif %}
